fixed nav bunching, word wrap for long urls

--- a/taproot-eqil/css/main.css
+++ b/taproot-eqil/css/main.css
@@ -14,6 +14,7 @@ main.css
 
 body {
     background-color: #fbfbfb;
+    word-wrap: break-word;
 }
 
 * {
@@ -97,7 +98,7 @@ body > div.container_24.wrapper {
 
 #header {
     width: 960px;
-    height: 139px;
+    height: 127px;
     background: url("../img/logotype.png") 115px 70px no-repeat, url("../img/type.outline.png") center 38px no-repeat;
     background-color: #366595;
     margin-bottom: 0px;
